--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,13 +54,15 @@ nav:
     - Getting Started: 
       - Where to start?: dev/start/start.md
       - The Ergo Protocol: dev/ergo/protocol.md
+      - Resources: dev/start/resources.md
     - Protocol:
       - UTXO State: dev/protocol/utxo-state.md
       - Autolykos: dev/protocol/autolykos.md
-      - Storage Rent: dev/protocol/rent.md  
+      - Storage Rent: dev/protocol/rent.md
     - Data Model:
-      - Model Transaction: dev/protocol/transaction.md
+      - Transactions: dev/protocol/transaction.md
       - Box: dev/data-model/box.md
+      - Block: dev/data-model/block.md
       - Addresses: dev/protocol/address.md
     - P2P:
       - P2P Protocol Overview: dev/data-model/p2p-protocol.md
@@ -68,12 +70,13 @@ nav:
       - Network Messages: dev/data-model/p2p-handshake.md
       - Modifiers Exchange: dev/data-model/p2p-handshake.md
     - Libraries:
-      - AppKit: dev/stack/appkit.md
-      - ErgoTool: dev/stack/ergotool.md
-      - Kiosk: dev/stack/kiosk.md
-      - JDE: dev/stack/jde.md
-      - Assembler: dev/stack/assembler.md
+      - AppKit: dev/lib/appkit.md
+      - ErgoTool: dev/lib/ergotool.md
+      - Kiosk: dev/lib/kiosk.md
+      - JDE: dev/lib/jde.md
+      - Assembler: dev/lib/assembler.md
     - Smart Contracts:
+      - Introduction: dev/scs/basics.md
       - ErgoScript: dev/scs/ergoscript.md
       - FlowCards: dev/scs/flowcards.md
       - Atomic Swaps: dev/protocol/atomic.md
@@ -101,8 +104,8 @@ nav:
       - History Pruning: node/history-pruning.md
       - Snapshots: node/snapshots.md
       - NiPoPoWS: node/nipopow.md
-  - Uses:
-    - dApps: uses/apps.md
+  - Applications:
+    - Use Cases: uses/apps.md
     - Zero-Knowledge: uses/zk.md      
     - Examples:
       - Use Cases: uses/use.md
