--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,7 +134,7 @@ nav:
       - PoW Tokens: uses/PoW_tokens.md
       - Collateral Mining: uses/collateral-mining.md
       - Perpetual Tokens: uses/perpetual.md
-      - Bonding Curve: uses/PoW_tokens.md
+      - Bonding Curve: uses/bonding.md
 
       
 
