--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: ErgoDocs
-site_url: http://docs.ergoplatform.org
+site_url: https://ergodocs.rtfd.io
 repo_url: https://github.com/glasgowm148/ergodocs
 
 
