--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,9 @@ theme:
     font:
       text: Roboto
 extra_css: [assets/extra.css]
+extra_javascript:
+  - assets/extra.js
+
 
 extra:
   version:
