--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,7 @@ nav:
       - Stack: 
         - Front-End: dev/stack/front-end.md
         - Back-End: dev/stack/back-end.md
+        -  Raspberry Pi Blockchain Explorer: dev/stack/rpi-blockchain-explorer.md
       - Integration: dev/Integration/guide.md
       - Misc: dev/start/resources.md
 
