--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,8 @@ nav:
       - Stack: 
         - Front-End: dev/stack/front-end.md
         - Back-End: dev/stack/back-end.md
+      - Tutorials:
+        - Dust: node/dust.md
         - Pi Blockchain Explorer: dev/stack/rpi-blockchain-explorer.md
       - Integration: dev/Integration/guide.md
       - Misc: dev/start/resources.md
@@ -142,7 +144,7 @@ nav:
       - Email Client for Blocked Internet: uses/blocked_web.md
       - Atomic Swaps: dev/protocol/atomic.md
     - Further Ideas:
-      - CDBC: uses/cdbc.md
+      - CDBC: uses/cbdc.md
       - Lotteries: uses/lottery.md
       - Insurance: uses/insurance.md
       - Derivatives: uses/deriv.md
