--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: ErgoDocs
-site_url: https://docs.ergoplatform.org
+site_url: https://docs.ergoplatform.com
 repo_url: https://github.com/glasgowm148/ergodocs
 edit_uri: edit/main/docs/
 
