dapp and ledger

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,10 @@ nav:
       - Wallets: dev/wallet/index.md
       - Addresses: dev/wallet/address.md
       - Hierarchical keys: dev/wallet/keys.md
-      - ErgoPay: dev/wallet/ergo-pay.md
+      - Payments:
+        - ErgoPay: dev/wallet/payments/ergo-pay.md
+        - dApp Connector: dev/wallet/payments/dApp.md
+        - Ledger: dev/wallet/payments/ledger.md
     - Smart Contracts:
       - Smart Contracts: dev/scs/index.md
       - ErgoScript: 
