--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -129,6 +129,7 @@ nav:
       - Linux: node/platforms/linux.md
       - Pi: node/platforms/pi.md
       - Docker: node/platforms/docker.md
+      - Troubleshooting: node/platforms/troubleshooting.md 
     #- Quick Install: node/quick.md
     - Overview: 
       - Wallet: node/wallet.md
