--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,7 @@ nav:
       - Pi: node/platforms/pi.md
       - Docker: node/platforms/docker.md
       - Troubleshooting: node/platforms/troubleshooting.md 
+      - FAQ: node/platforms/FAQ.md 
     #- Quick Install: node/quick.md
     - Overview: 
       - Wallet: node/wallet.md
